; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_filter-rar.c_br_next_rarvm_number.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_filter-rar.c_br_next_rarvm_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MemBitReader = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.MemBitReader*)* @br_next_rarvm_number to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @br_next_rarvm_number(%struct.MemBitReader* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.MemBitReader*, align 8
  %4 = alloca i32, align 4
  store %struct.MemBitReader* %0, %struct.MemBitReader** %3, align 8
  %5 = load %struct.MemBitReader*, %struct.MemBitReader** %3, align 8
  %6 = call i32 @br_bits(%struct.MemBitReader* %5, i32 2)
  switch i32 %6, label %27 [
    i32 0, label %7
    i32 1, label %10
    i32 2, label %24
  ]

7:                                                ; preds = %1
  %8 = load %struct.MemBitReader*, %struct.MemBitReader** %3, align 8
  %9 = call i32 @br_bits(%struct.MemBitReader* %8, i32 4)
  store i32 %9, i32* %2, align 4
  br label %30

10:                                               ; preds = %1
  %11 = load %struct.MemBitReader*, %struct.MemBitReader** %3, align 8
  %12 = call i32 @br_bits(%struct.MemBitReader* %11, i32 8)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp sge i32 %13, 16
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = load i32, i32* %4, align 4
  store i32 %16, i32* %2, align 4
  br label %30

17:                                               ; preds = %10
  %18 = load i32, i32* %4, align 4
  %19 = shl i32 %18, 4
  %20 = or i32 -256, %19
  %21 = load %struct.MemBitReader*, %struct.MemBitReader** %3, align 8
  %22 = call i32 @br_bits(%struct.MemBitReader* %21, i32 4)
  %23 = or i32 %20, %22
  store i32 %23, i32* %2, align 4
  br label %30

24:                                               ; preds = %1
  %25 = load %struct.MemBitReader*, %struct.MemBitReader** %3, align 8
  %26 = call i32 @br_bits(%struct.MemBitReader* %25, i32 16)
  store i32 %26, i32* %2, align 4
  br label %30

27:                                               ; preds = %1
  %28 = load %struct.MemBitReader*, %struct.MemBitReader** %3, align 8
  %29 = call i32 @br_bits(%struct.MemBitReader* %28, i32 32)
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %27, %24, %17, %15, %7
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @br_bits(%struct.MemBitReader*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
